--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,14 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-2">
+<div class="row content justify-content-center">
+  <div class="col-md-3">
       <app-hunted-lists></app-hunted-lists>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-4">
     <app-hunted-list></app-hunted-list>
   </div>
-  <div class="col">
+  <div class="col-md-4">
     <app-character></app-character>
   </div>
 </div>
