Fixed a bug where some characters weren't tracked by the services.

--- a/src/app/hunted/hunted/hunted.component.html
+++ b/src/app/hunted/hunted/hunted.component.html
@@ -9,6 +9,6 @@
     href="#"
     class="list-group-item list-group-item-action"
   >
-    {{ tibiaChar.level }} - {{ tibiaChar.name }}
+    {{ tibiaChar.level }} - {{ tibiaChar.name }} <fa [ngClass]="(tibiaChar.isOnline) ? 'online' : 'offline'" name="circle"></fa>
   </a>
 </ng-container>
