Fixed basic routes and added components for these.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,4 @@
   </div>
 </div>
 
-<div class="row content justify-content-center">
-  <div class="col-md-3">
-      <app-hunted-lists></app-hunted-lists>
-  </div>
-  <div class="col-md-4">
-    <app-hunted-list></app-hunted-list>
-  </div>
-  <div class="col-md-4">
-    <app-character></app-character>
-  </div>
-</div>
+<router-outlet></router-outlet>
