--- a/src/app/character/character/character.component.html
+++ b/src/app/character/character/character.component.html
@@ -1,54 +1,71 @@
-
-      <div class="panel panel-default">
-          <div class="card">
-              <h5 class="card-header">Tibia Character Information</h5>
-              <div class="card-body">
-                  <div class="row">
-                      <div class="col">
-                        <p class="lead float-left"><b>Name:</b> {{ tibiaCharacter.name }}</p>
-                      </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                          <p class="lead float-left"><b>Vocation:</b> {{ tibiaCharacter.vocation }}</p>
-                        </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Level:</b> {{ tibiaCharacter.level }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Guild:</b> {{ tibiaCharacter.guild }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Residence:</b> {{ tibiaCharacter.residence }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Latest Death By:</b> {{ tibiaCharacter.latestDeathBy }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Last Login:</b> {{ tibiaCharacter.lastLogin }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p class="lead float-left"><b>Latest Death:</b> {{ tibiaCharacter.latestDeath }}</p>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                            <p
-                            *ngFor="let huntingPlace of tibiaCharacter.huntingPlaces" 
-                            class="lead float-left"><b>Favorite Hunting Places: </b> {{ huntingPlace.name }}</p>
-                          </div>
-                      </div>
-              </div> 
+<div *ngIf="tibiaCharacter" class="panel panel-default">
+  <div class="card">
+    <h5 class="card-header">Tibia Character Information</h5>
+    <div class="card-body">
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left"><b>Name:</b> {{ tibiaCharacter.name }}</p>
         </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Vocation:</b> {{ tibiaCharacter.vocation }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Level:</b> {{ tibiaCharacter.level }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Guild:</b> {{ tibiaCharacter.guild }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Residence:</b> {{ tibiaCharacter.residence }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Latest Death By:</b> {{ tibiaCharacter.latestDeathBy }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Last Login:</b> {{ tibiaCharacter.lastLogin }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="lead float-left">
+            <b>Latest Death:</b> {{ tibiaCharacter.latestDeath }}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p
+            *ngFor="let huntingPlace of tibiaCharacter.huntingPlaces"
+            class="lead float-left"
+          >
+            <b>Favorite Hunting Places: </b> {{ huntingPlace.name }}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
